# LimeTray

./: .ccls  .gitignore  CMakeLists.txt  Limetray.sln  Limetray.vcxproj  Limetray.vcxproj.filters  README.md  build.bat  compile_flags.txt  run.bat
Limetray/: Limetray.vcxproj  Limetray.vcxproj.filters  Resource.aps  Resource.rc
Limetray/src/: limetray.c  limetray.cpp  limetray.h
